--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: linear-gradient(to bottom right, #838baa, #cfddee);
+  background: linear-gradient(to bottom right, #535a77, #cfddee);
   min-height: 100vh;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
